# baseball_stats

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
notebooks/: analytics_overview.ipynb  batter_analysis.ipynb  learning_notebook.ipynb
notebooks/.baseball_stats_cache/: batter_statcast_days_30_player_id_592450_year_None_ec54d61d.pkl  fangraphs_hitting_qual_100_year_2025_8da49cd3.pkl  fangraphs_pitching_qual_20_year_2025_392d1d5c.pkl  hitting_qualified_min_pa_100_year_2025_cb222de4.pkl  hitting_raw_year_2025_d627f949.pkl  pitcher_statcast_days_30_player_id_592450_year_None_ec54d61d.pkl  pitching_qualified_min_ip_20_year_2025_9793c149.pkl  pitching_raw_year_2025_d627f949.pkl  player_lookup_first_name_Aaron_last_name_Judge_year_None_e22eb70f.pkl  sprint_speed_year_2025_d627f949.pkl  standings_year_2025_d627f949.pkl  team_stats_year_2025_d627f949.pkl
src/baseball_stats/: __init__.py  analysis.py  batter_analysis.py  data.py  data_loader.py  stories.py
